<resources>
    <string name="app_name">Workout app</string>
    <string name="workout_exercise_at">Workout: Exercise at</string>
    <string name="home">home</string>
    <string name="start">Start</string>
    <string name="legs">Legs</string>
    <string name="_6_exercises">6 Exercises</string>
    <string name="_10min">10min</string>
    <string name="settings">Settings</string>
    <string name="start_workout">Start Workout</string>
    <string name="difficulty_level">Difficulty Level</string>
    <string name="_3min">3min</string>
    <string name="squats">Squats</string>
    <string name="_10_min">10 min</string>
    <string name="_6_exercises_200_kcal">6 exercises - 200 Kcal</string>
    <string name="pause">Pause</string>

    <string-array name="difficulty_levels">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>